fix content overflow in settings subsection (#10960)

--- a/res/css/components/views/settings/shared/_SettingsSubsection.pcss
+++ b/res/css/components/views/settings/shared/_SettingsSubsection.pcss
@@ -34,7 +34,9 @@ limitations under the License.
     width: 100%;
     display: grid;
     grid-gap: $spacing-8;
-    grid-template-columns: 1fr;
+    // setting minwidth 0 makes columns definitely sized
+    // fixing horizontal overflow
+    grid-template-columns: minmax(0, 1fr);
     justify-items: flex-start;
     margin-top: $spacing-24;
 
