--- a/res/css/views/settings/_LayoutSwitcher.pcss
+++ b/res/css/views/settings/_LayoutSwitcher.pcss
@@ -19,6 +19,7 @@ limitations under the License.
     display: flex;
     flex-direction: row;
     gap: 24px;
+    width: 100%;
 
     color: $primary-content;
 
